--- a/templates/group-sheet.html
+++ b/templates/group-sheet.html
@@ -1,4 +1,4 @@
-<form class="{{cssClass}} campaign-codex group-sheet" autocomplete="off">
+<form class="{{cssClass}} campaign-codex group-sheet themed" autocomplete="off">
   <div class="sheet-container">
     <div class="group-sheet-container">
     
@@ -13,7 +13,7 @@
           <h1 class="sheet-title">{{document.name}}</h1>
           <div class="sheet-type">{{sheetTypeLabel}}</div>
           
-          <button class="image-change-btn" type="button">
+          <button type="button" data-action="changeImage" class="image-change-btn" title="Change Image">
             <i class="fas fa-camera"></i>
           </button>
         </div>
@@ -26,7 +26,11 @@
       <main class="group-main">
         <nav class="group-tabs">
           {{#each tabs}}
-            <div class="group-tab {{#if active}}active{{/if}}" data-tab="{{key}}">
+            <div class="group-tab {{#if active}}active{{/if}}" 
+                 data-action="switchTab" 
+                 data-tab="{{key}}"
+                 role="button" 
+                 tabindex="0">
               <i class="{{icon}}"></i>
               <span class="tab-label">{{label}}</span>
               {{#if statistic}}
