--- a/templates/editors/description-editor.html
+++ b/templates/editors/description-editor.html
@@ -1,14 +1,23 @@
-<form class="editable flexcol" autocomplete="off">
+<form class="editable flexcol themed" autocomplete="off">
     <div class="editor prosemirror{{#if_system 'dnd5e'}} dnd5e{{/if_system}}">
-          <div name="description" data-engine="prosemirror" data-collaborate="true" class="cc-editor{{#if_system 'dnd5e'}} dnd5e2-journal  editor-content{{/if_system}}">
+        <div name="description" 
+             data-engine="prosemirror" 
+             data-collaborate="true" 
+             class="cc-editor{{#if_system 'dnd5e'}} dnd5e2-journal editor-content{{/if_system}}">
             {{{description}}}
-
         </div>
     </div>
     <footer class="sheet-footer flexrow">
-        <button type="submit" name="submit">
+        <button type="button" 
+                data-action="saveChanges" 
+                name="submit" 
+                class="save-button">
             <i class="far fa-save"></i> Save Changes
+        </button>
+        <button type="button" 
+                data-action="cancel" 
+                class="cancel-button">
+            <i class="fas fa-times"></i> Cancel
         </button>
     </footer>
 </form>
-
