--- a/templates/editors/description-editor.html
+++ b/templates/editors/description-editor.html
@@ -1,8 +1,14 @@
-<div class="editor prosemirror{{#if_system 'dnd5e'}} dnd5e{{/if_system}}">
-    <div name="description" 
-         data-engine="prosemirror" 
-         data-collaborate="true" 
-         class="cc-editor{{#if_system 'dnd5e'}} dnd5e2-journal editor-content{{/if_system}}">
-        {{{description}}}
+<form class="editable flexcol" autocomplete="off">
+    <div class="editor prosemirror{{#if_system 'dnd5e'}} dnd5e{{/if_system}}">
+          <div name="description" data-engine="prosemirror" data-collaborate="true" class="cc-editor{{#if_system 'dnd5e'}} dnd5e2-journal  editor-content{{/if_system}}">
+            {{{description}}}
+
+        </div>
     </div>
-</div>
+    <footer class="sheet-footer flexrow">
+        <button type="submit" name="submit">
+            <i class="far fa-save"></i> Save Changes
+        </button>
+    </footer>
+</form>
+
